package: Update dependencies to fix security vulnerabilities.

--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
   "homepage": "https://github.com/poelstra/mhub#readme",
   "devDependencies": {
     "@types/chai": "^3.4.34",
+    "@types/micromatch": "^3.1.0",
     "@types/mocha": "^2.2.32",
     "chai": "^3.5.0",
-    "coveralls": "^3.0.1",
+    "coveralls": "^3.0.3",
     "mocha": "^5.1.1",
     "parallelshell": "^2.0.0",
     "remap-istanbul": "^0.11.1",
@@ -66,7 +67,7 @@
     "@types/node": "^8.0.17",
     "@types/ws": "0.0.35",
     "@types/yargs": "0.0.33",
-    "micromatch": "^3.0.4",
+    "micromatch": "^3.1.10",
     "mkdirp": "^0.5.1",
     "source-map-support": "^0.4.1",
     "ts-promise": "^0.3.4",
